# thespian

./: Cargo.toml  README.md  expanded.rs
.github/workflows/: rust.yml
examples/: actor.rs  remote.rs
src/: envelope.rs  lib.rs  message.rs  proxy.rs  remote.rs  runtime.rs  stage.rs
tests/: concurrency.rs  deadlock.rs  derive.rs  manual_impl.rs  private_actor.rs
thespian-derive/: Cargo.toml
thespian-derive/src/: lib.rs
