[package]
name = "thespian"
version = "0.1.0"
authors = ["David LeGare <dlegare.1001@gmail.com>"]
edition = "2018"

[dependencies]
futures-preview = { version = "0.3.0-alpha.18", features = ["async-await", "nightly"] }
log = "0.4.8"
thespian-derive = { path = "./thespian-derive" }
runtime = "0.3.0-alpha.7"

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"

[workspace]
