[package]
name = "thespian"
version = "0.1.0"
authors = ["David LeGare <dlegare.1001@gmail.com>"]
edition = "2018"

[dependencies]
derivative = "1.0.3"
futures = "0.3.1"
log = "0.4.8"
num_enum = "0.4.1"
thespian-derive = { version = "0.1", path = "./thespian-derive" }
runtime = "0.3.0-alpha.7"

[workspace]
