[package]
name = "thespian"
version = "0.1.0"
authors = ["David LeGare <dlegare.1001@gmail.com>"]
edition = "2018"

[dependencies]
derivative = "1.0.3"
futures = "0.3.1"
log = "0.4.8"
num_enum = "0.4.1"
thespian-derive = { version = "0.1", path = "./thespian-derive" }
thiserror = "1.0.15"

# Optional runtime dependencies.
async-std = { version = "1.5.0", optional = true }
tokio = { version = "0.2.19", features = ["rt-core"], optional = true }

[dev-dependencies]
tokio = { version = "0.2.19", features = ["full"] }

[workspace]

[[example]]
name = "actor"
required-features = ["tokio"]

[[example]]
name = "remote"
required-features = ["tokio"]
